# kbase-security-dashboard

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  security_db_config.toml.jinja
.github/workflows/: codeql.yml  docker-publish.yaml  test.yml
docker-compose/: superset-entrypoint.sh  superset_config.py
scripts/: entrypoint.sh
src/kbase/: security_dashboard.py
src/kbase/_security_dashboard/: cli.py  code_scanning_alerts.py  code_scanning_alerts_load.py  codecov.py  codecov_load.py  dependabot.py  dependabot_alerts.py  dependabot_alerts_load.py  dependabot_load.py  gha_test_actions.py  gha_test_actions_load.py  git_commit.py  image_util.py  load_all.py  repo_metadata.py  trivy.py  trivy_load.py  (+5 more)
superset/: README.md  detail_table_queries.md  main_table_query.md  main_table_query.txt
test/: cli_test.py  code_scanning_alerts_load_test.py  code_scanning_alerts_test.py  codecov_load_test.py  dependabot_alerts_load_test.py  dependabot_alerts_test.py  dependabot_load_test.py  dependabot_test.py  gha_test_actions_load_test.py  gha_test_actios_test.py  git_commit_test.py  image_util_test.py  load_all_test.py  repo_metadata_test.py  security_dashboard_test.py  trivy_load_test.py  trivy_scanner_test.py  trivy_test.py  util_test.py  version_test.py  vulnerabiltiies_load_test.py  vulnerabiltiies_test.py
test/service/: app_state_test.py  error_mapping_test.py  errors_test.py  exceptions_test.py  http_bearer_test.py  logfields_test.py  models_errors_test.py  routes_test.py  scheduler_test.py  timestamp_test.py  user_test.py
util/: check_token_scopes.py
(+11 files in other folders)
