[project]
name = "kbase-security-dashboard"
version = "0.1.0"
description = "KBase security dashboard"
readme = "README.md"
authors = [{ name = "KBase Development Team" }]
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "apscheduler==3.11.2",
    "fastapi[standard]==0.127.0",
    "jinja-cli==1.2.2",
    "kbase-auth-client==0.1.1",
    "psycopg2==2.9.11",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "requests==2.32.5",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "ipython==9.7.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]
